# openclaw-match-maker

./: .clawignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_complete.py
examples/: basic_example.py
matchmaker/: __init__.py  matchmaker.py
matchmaker/modules/: __init__.py
matchmaker/modules/icebreaker/: __init__.py  ice_generator.py
matchmaker/modules/matching/: __init__.py  matcher.py
matchmaker/modules/profiling/: __init__.py  profiler.py
matchmaker/modules/relationship/: __init__.py  assessor.py
matchmaker/types/: __init__.py  models.py  person.py  profile.py
